--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+
+  <body class="flex justify-center items-center h-screen bg-amber-400 dark:bg-fuchsia-700 selection:bg-slate-500"></body>
 </html>
