--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
   </head>
 
-  <body class="flex justify-center items-center h-screen bg-amber-400 dark:bg-fuchsia-700 selection:bg-slate-500"></body>
+  <body class="flex justify-center items-center h-screen  bg-yellow-600 dark:bg-fuchsia-700 selection:bg-slate-500"></body>
 </html>
