--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,5 +6,7 @@
     <title>Document</title>
   </head>
 
-  <body class="flex justify-center items-center h-screen  bg-yellow-600 dark:bg-fuchsia-700 selection:bg-slate-500"></body>
+  <body
+    class="flex h-screen items-center justify-center bg-yellow-600 selection:bg-slate-500 dark:bg-fuchsia-700"
+  ></body>
 </html>
